Добавляет часть main

--- a/index.html
+++ b/index.html
@@ -37,7 +37,66 @@
 
       </nav>
     </header>
-    <main>
+    <main class="main-index">
+      <section class="main-caption">
+        <h2 class="main-caption-title">welcome</h2>
+          <p class="main-caption-title-item">to the gargeous</p>
+        <h1 class="main-caption-title">SEDONA</h1>
+          <p class="main-caption-title-item">"Beacouse the grand canyon sucks!"</p>
+          <p class="main-specification">седона - небольшой городок в аризоне, заслуживающий большего!</p>
+          <p class="main-specification">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+      <section class="main-couse">
+        <ol class="main-couse-list">
+            <span>
+              <li class="main-couse-item"><h2>Настоящий городок</h2>
+              <p>— №1 —</p>
+              <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </li>
+              <img src="" alt="Фотография городка">
+            </span>
+            <span>
+              <ul>
+                <li>
+                  <img src="" alt="Логотип жилья">
+                  <h3>Жилье</h3>
+                  <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </li>
+                <li>
+                  <img src="" alt="Логотип еды">
+                  <h3>Еда</h3>
+                  <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li>
+                  <img src="" alt="Логотип сувениров">
+                  <h3>Сувениры</h3>
+                  <p>Не только китайского но и настоящего местного производства!</p>
+                </li>
+              </ul>
+            </span>
+            <img src="" alt="Фотография гор">
+            <li class="main-couse-item"><h2>Там есть мост дьявола</h2>
+              <p>— №2 —</p>
+              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </li>
+            <li class="main-couse-item"><h2>Небольшая площадь</h2>
+              <p>— №3 —</p>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="main-couse-item"><h2>Красивая дорога</h2>
+              <p>— №4 —</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="main-couse-item"><h2>Мало туристов</h2>
+              <p>— №5 —</p>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+        </ol>
+      </section>
+
+
+
+
     </main>
     <footer class="footer-main">
       <section class="footer-contacts">
