--- a/index.html
+++ b/index.html
@@ -34,28 +34,20 @@
             <button class="button" type="submit">ХОЧУ СЮДА!</button>
           </li>
         </ul>
-
       </nav>
     </header>
     <main class="main-index">
       <section class="main-caption">
-        <h2 class="main-caption-title">welcome</h2>
-          <p class="main-caption-title-item">to the gargeous</p>
-        <h1 class="main-caption-title">SEDONA</h1>
-          <p class="main-caption-title-item">"Beacouse the grand canyon sucks!"</p>
+          <img src="" alt="Картинка с названием и приветствием">
           <p class="main-specification">седона - небольшой городок в аризоне, заслуживающий большего!</p>
           <p class="main-specification">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="main-couse">
         <ol class="main-couse-list">
-            <span>
               <li class="main-couse-item"><h2>Настоящий городок</h2>
               <p>— №1 —</p>
               <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            </li>
               <img src="" alt="Фотография городка">
-            </span>
-            <span>
               <ul>
                 <li>
                   <img src="" alt="Логотип жилья">
@@ -73,9 +65,10 @@
                   <p>Не только китайского но и настоящего местного производства!</p>
                 </li>
               </ul>
-            </span>
-            <img src="" alt="Фотография гор">
-            <li class="main-couse-item"><h2>Там есть мост дьявола</h2>
+              </li>
+            <li class="main-couse-item">
+              <img src="" alt="Фотография гор">
+              <h2>Там есть мост дьявола</h2>
               <p>— №2 —</p>
               <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </li>
@@ -102,17 +95,17 @@
       <section class="footer-contacts">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="buttom" href="https://www.twitter.com/htmlacademy_ru">
+            <a class="social-link" href="https://www.twitter.com/htmlacademy_ru">
               <span class="visually-hidden">twitter</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="buttom" href="https://www.facebook.com/htmlacademy">
+            <a class="social-link" href="https://www.facebook.com/htmlacademy">
               <span class="visually-hidden">facebook</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="buttom" href="https://www.youtube.com/c/HTMLAcademyRUS">
+            <a class="social-link" href="https://www.youtube.com/c/HTMLAcademyRUS">
               <span class="visually-hidden">youtube</span>
             </a>
           </li>
