Добавляет подписку и ссылку на каталог

--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
             </li>
         </ol>
       </section>
+      <section class="catalog-link">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="button" type="submit">Поиск гостиницы в Седоне</button>
+      </section>
+      <section class="email-link">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="email-form">
+          <label for="email-form"></label>
+          <input type="e-mail" id="email-form" placeholder="e-mail">
+          <button class="button" type="submit">подписаться</button>
+        </form>
+      </section>
+
 
 
 
