--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main class="main-index">
       <section class="main-caption">
           <img src="" alt="Картинка с названием и приветствием">
-          <p class="main-specification">седона - небольшой городок в аризоне, заслуживающий большего!</p>
+          <h3 class="main-specification">седона - небольшой городок в аризоне, заслуживающий большего!</h3>
           <p class="main-specification">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="main-couse">
@@ -96,7 +96,7 @@
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="email-form">
           <label for="email-form"></label>
-          <input type="e-mail" id="email-form" placeholder="e-mail">
+          <input type="email" id="email-form" placeholder="e-mail">
           <button class="button" type="submit">подписаться</button>
         </form>
       </section>
@@ -125,7 +125,7 @@
             </a>
           </li>
         </ul>
-        <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="footer-contacts-phone" href="tel:+78128121212"><h2>+7 (812) 812-12-12</h2></a>
         <a href="">
           <img src="" alt="Логотип htmlacademy">
         </a>
