--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
       <section class="catalog-link">
         <h2>Заинтересовались?</h2>
         <p>Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <form action="catalog.html">
         <button class="button" type="submit">Поиск гостиницы в Седоне</button>
+        </form>
       </section>
       <section class="email-link">
         <h2>Подпишитесь на рассылку</h2>
@@ -126,7 +128,7 @@
           </li>
         </ul>
         <a class="footer-contacts-phone" href="tel:+78128121212"><h2>+7 (812) 812-12-12</h2></a>
-        <a href="">
+        <a href="https://htmlacademy.ru">
           <img src="" alt="Логотип htmlacademy">
         </a>
       </section>
