--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li>
-            <button class="button" type="submit">ХОЧУ СЮДА!</button>
+            <a href="catalog.html"><button>ХОЧУ СЮДА!</button></a>
           </li>
         </ul>
       </nav>
